src/objects/WikiPageVersion__c.object
<CustomObject>
    <description>Check the history of page</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FirstPublishedDate__c</fullName>
        <label>First Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsLatestVersion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>tag for wiki page</description>
        <inlineHelpText>Please use the whitespace or comma add more labels</inlineHelpText>
        <label>Label</label>
        <picklist>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LastPublishedDate__c</fullName>
        <label>Last Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <label>Publish Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WikiPage__c</fullName>
        <label>Wiki Page</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipLabel>Page Version</relationshipLabel>
        <relationshipName>WikiPageVersions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wiki Page Version</label>
    <nameField>
        <displayFormat>PV-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Page Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wiki Page Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>